--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
               </li>
             </ul>
             <p class="telephone">Тел.: +7 (495) 495-95-95</p>
-            <a class="html-academy-logo" href="https://htmlacademy.ru/">
+            <a class="html-academy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
               <img src="img/html-academy-logo.svg" width="27" height="35" alt="Интернет-магазин гаджетов Device">
             </a>
           </div>
