--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link href="css/normalize.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/minified-style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/minified-style.css"> -->
     <title>Device</title>
   </head>
 
@@ -12,7 +12,7 @@
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation main-navigation-catalog">
-          <a class="logo-icon logo-icon-header">
+          <a class="logo-icon logo-icon-header" href="index.html">
             <img src="img/logo-icon.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
           </a>
           <div class="user-interface">
@@ -37,7 +37,7 @@
             </ul>
           </div>
           <div class="site-navigation">
-            <div class="site-navigation-catalog">
+            <div class="site-navigation-catalog page-catalog">
               <a class="catalog" href="#">Каталог товаров</a>
             </div>
             <ul class="site-navigation-list no-bar">
@@ -193,7 +193,7 @@
                   </li>
                   <li class="card-footer">
                     <a href="#">Профессиональная <br> селфи-палка</a>
-                    <p class="price">1500 руб.</p>
+                    <p class="price">1 500 руб.</p>
                   </li>
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
@@ -209,7 +209,7 @@
                   </li>
                   <li class="card-footer">
                     <a href="#">Непотопляемая селфи-палка</a>
-                    <p class="price">2500 руб.</p>
+                    <p class="price">2 500 руб.</p>
                   </li>
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
@@ -225,7 +225,7 @@
                   </li>
                   <li class="card-footer">
                     <a href="#">Селфи-палка «Следуй за <br> мной»</a>
-                    <p class="price">4900 руб.</p>
+                    <p class="price">4 900 руб.</p>
                   </li>
                   <li class="card-hover">
                     <a class="button" href="#">В корзину</a>
@@ -239,11 +239,17 @@
                 <a class="previous-next" href="#">
                   <div class="previous-next-container">Назад</div>
                 </a>
-                <div class="pages-wrapper">
-                  <a href="#">1</a>
-                  <a href="#">2</a>
-                  <a href="#">3</a>
-                </div>
+                <ul class="pages-wrapper">
+                  <li>
+                    <a href="#">1</a>
+                  </li>
+                  <li>
+                    <a href="#">2</a>
+                  </li>
+                  <li>
+                    <a href="#">3</a>
+                  </li>
+                </ul>
                 <a class="previous-next" href="#">
                   <div class="previous-next-container">Вперёд</div>
                 </a>
@@ -258,7 +264,7 @@
           <div class="container">
             <div class="footer-wrapper">
               <div class="footer-left">
-                <a class="logo-icon logo-icon-footer">
+                <a class="logo-icon logo-icon-footer" href="index.html">
                   <img src="img/logo-icon-footer.svg" width="164" height="35" alt="Интернет-магазин гаджетов Device">
                 </a>
                 <p class="adress">г. Москва, ул. Строителей, 15</p>
