--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link href="css/normalize.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/minified-style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/minified-style.css"> -->
     <title>Device</title>
   </head>
 
@@ -42,7 +42,7 @@
           </div>
           <div class="site-navigation">
             <div class="site-navigation-catalog">
-              <a class="catalog" href="#">Каталог товаров</a>
+              <a class="catalog" href="catalog.html">Каталог товаров</a>
             </div>
             <ul class="site-navigation-list">
               <li>
@@ -56,7 +56,7 @@
               </li>
             </ul>
           </div>
-          <div class="sub-menu-wrapper">
+          <div class="sub-menu-wrapper visually-hidden">
             <div class="sub-menu">
               <ul class="sub-menu-list">
                 <li>
@@ -95,12 +95,12 @@
             <li class="popular-slide" id="slide-1">
               <div class="popular-wrapper slide1">
                 <span class="slide-number">01</span>
-                <b>Делай селфи,<br> как Бен Стилер!</b>
+                <b>Делай селфи,<br> как Бен Стиллер!</b>
                 <p>
                   Самая длинная палка для селфи доступна в нашем магазине. <br>
                   Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
                 </p>
-                <a class="button" href="#">Подробнее</a>
+                <a class="button popular-button" href="#">Подробнее</a>
                 <div class="table-container">
                   <div>
                     <b>8,5 м</b>
@@ -125,7 +125,7 @@
                   Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
                   не пропускать занятия и соблюдать диету.
                 </p>
-                <a class="button" href="#">Подробнее</a>
+                <a class="button popular-button" href="#">Подробнее</a>
                 <div class="table-container">
                   <div>
                     <b>48 часов</b>
@@ -137,13 +137,13 @@
             <li class="popular-slide" id="slide-3">
               <div class="popular-wrapper slide3">
                 <span class="slide-number">03</span>
-                <b>Порхает как бабочка, <br>
+                <b>Порхает как бабочка,<br>
                     жалит как пчела!</b>
                 <p>
                   Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
                   мощным лазером, замаскированным под стандартную камеру.
                 </p>
-                <a class="button" href="#">Подробнее</a>
+                <a class="button popular-button" href="#">Подробнее</a>
                 <div class="table-container">
                   <div>
                     <b>800 м</b>
@@ -170,7 +170,7 @@
               <a class="category category-virtual" href="#">Виртуальная реальность</a>
             </li>
             <li class="categories-item">
-              <a class="category category-monopod" href="#">Моноподы для селфи</a>
+              <a class="category category-monopod" href="#">Моноподы <br> для селфи</a>
             </li>
             <li class="categories-item">
               <a class="category category-actioncam" href="#">Экшн-камеры</a>
