Исправления ссылок на разделы

--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
             </form>
             <ul class="user-navigation">
               <li class="account">
-                <a class="username account-icon" href="#">Валентин Петухов</a>
+                <a class="username account-icon" href="profile.html">Валентин Петухов</a>
                 <a class="account-icon log-out" href="#">Выйти</a>
               </li>
               <li class="compare">
