--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="site-navigation">
             <div class="site-navigation-catalog">
-              <a class="catalog" href="catalog.html">Каталог товаров</a>
+              <a class="catalog" href="">Каталог товаров</a>
             </div>
             <ul class="site-navigation-list">
               <li>
@@ -59,26 +59,26 @@
             <div class="sub-menu">
               <ul class="sub-menu-list">
                 <li>
-                  <a href="#">Виртуальная реальность</a>
+                  <a href="vr.html">Виртуальная реальность</a>
                 </li>
                 <li>
                   <a href="catalog.html">Моноподы для селфи</a>
                 </li>
                 <li>
-                  <a href="#">Экшн-камеры</a>
+                  <a href="act-cams.html">Экшн-камеры</a>
                 </li>
               </ul>
               <ul class="sub-menu-list">
                 <li>
-                  <a href="#">Фитнес-браслеты</a>
+                  <a href="fit-bracelet.html">Фитнес-браслеты</a>
                 </li>
                 <li>
-                  <a href="#">Умные часы</a>
+                  <a href="smart-watch.html">Умные часы</a>
                 </li>
               </ul>
               <ul class="sub-menu-list">
                 <li>
-                  <a href="#">Квадрокоптеры</a>
+                  <a href="copters.html">Квадрокоптеры</a>
                 </li>
               </ul>
             </div>
@@ -166,22 +166,22 @@
           <h2 class="visually-hidden">Популярные категории товаров</h2>
           <ul class="categories-list">
             <li class="categories-item">
-              <a class="category category-virtual" href="#">Виртуальная реальность</a>
+              <a class="category category-virtual" href=" vr.html">Виртуальная реальность</a>
             </li>
             <li class="categories-item">
-              <a class="category category-monopod" href="#">Моноподы <br> для селфи</a>
+              <a class="category category-monopod" href="catalog.html">Моноподы <br> для селфи</a>
             </li>
             <li class="categories-item">
-              <a class="category category-actioncam" href="#">Экшн-камеры</a>
+              <a class="category category-actioncam" href="act-cams.html">Экшн-камеры</a>
             </li>
             <li class="categories-item">
-              <a class="category category-bracelet" href="#">Фитнес-браслеты</a>
+              <a class="category category-bracelet" href="fit-bracelet.html">Фитнес-браслеты</a>
             </li>
             <li class="categories-item">
-              <a class="category category-watch" href="#">Умные часы</a>
+              <a class="category category-watch" href="smart-watch.html">Умные часы</a>
             </li>
             <li class="categories-item">
-              <a class="category category-copters" href="#">Квадрокоптеры</a>
+              <a class="category category-copters" href="copters.html">Квадрокоптеры</a>
             </li>
           </ul>
         </section>
