Исправления по тех. заданию

--- a/catalog.html
+++ b/catalog.html
@@ -169,7 +169,7 @@
             <section class="catalog-section">
               <h2 class="visually-hidden">Список моноподов</h2>
               <div class="catalog-list">
-                <ul class="catalog-list-card">
+                <ul class="catalog-list-card new">
                   <li>
                     <h3 class="visually-hidden">Товар: Любительская селфи-палка</h3>
                     <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
@@ -185,7 +185,7 @@
                     </p>
                   </li>
                 </ul>
-                <ul class="catalog-list-card">
+                <ul class="catalog-list-card new">
                   <li>
                     <h3 class="visually-hidden">Товар: Профессиональная селфи-палка</h3>
                     <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
@@ -217,7 +217,7 @@
                     </p>
                   </li>
                 </ul>
-                <ul class="catalog-list-card">
+                <ul class="catalog-list-card new">
                   <li>
                     <h3 class="visually-hidden">Товар: Селфи-палка «Следуй за мной»</h3>
                     <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
