--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="site-navigation">
             <div class="site-navigation-catalog">
-              <a class="catalog" href="">Каталог товаров</a>
+              <a class="catalog" href="catalog.html">Каталог товаров</a>
             </div>
             <ul class="site-navigation-list">
               <li>
