--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <link href="css/normalize.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/minified-style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="/js/script.js"></script>
   <title>Device</title>
 </head>
 
@@ -261,7 +262,7 @@
               <h2 class="header-with-bar">Контакты</h2>
               <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br> проверить работоспособность покупки. Всякое бывает.</p>
               <a class="index-map" href="#"><img src="img/index-map.jpg" width="560" height="222" alt="Карта"></a>
-              <a class="button" href="#">Напишите нам</a>
+              <a class="button write-us" href="#">Напишите нам</a>
             </section>
           </div>
         </div>
@@ -313,7 +314,7 @@
           </div>
         </footer>
 
-        <section class="modal-feedback hidden">
+        <section class="modal-feedback">
           <h2 class="visually-hidden">Обратная связь</h2>
           <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
             <div class="feedback-top-container">
@@ -336,15 +337,14 @@
             <span class="visually-hidden">Закрыть всплывающее окно</span>
           </button>
         </section>
-        <section class="modal-map hidden">
+        <section class="modal-map">
           <h2 class="visually-hidden">Как до нас добраться</h2>
           <a href="https://yandex.ru/maps/213/moscow/?ll=37.529654%2C55.686980&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fll%3D37.529655%252C55.686981%26spn%3D0.001000%252C0.001000%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%259C%25D0%25BE%25D1%2581%25D0%25BA%25D0%25B2%25D0%25B0%252C%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%2520%25D0%25A1%25D1%2582%25D1%2580%25D0%25BE%25D0%25B8%25D1%2582%25D0%25B5%25D0%25BB%25D0%25B5%25D0%25B9%252C%252015%2520&z=16">
-            <img src="img/modal-map.jpg" alt="г. Москва, ул. Строителей, 15">
+            <img src="img/modal-map.jpg" width="960" height="559" alt="г. Москва, ул. Строителей, 15">
           </a>
           <button class="modal-close" type="button" name="button">
             <span class="visually-hidden">Закрыть всплывающее окно</span>
           </button>
         </section>
-
       </body>
       </html>
