Убрал лишние <br>

--- a/catalog.html
+++ b/catalog.html
@@ -189,8 +189,8 @@
                   <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
                 </li>
                 <li class="card-footer">
-                  <a href="#">Профессиональная <br> селфи-палка</a>
-                  <p class="price">1 500 руб.</p>
+                  <a href="#">Профессиональная селфи-палка</a>
+                  <p class="price">1&nbsp;500&nbsp;руб.</p>
                 </li>
                 <li class="card-hover">
                   <a class="button" href="#">В корзину</a>
@@ -221,8 +221,8 @@
                   <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                 </li>
                 <li class="card-footer">
-                  <a href="#">Селфи-палка «Следуй за <br> мной»</a>
-                  <p class="price">4 900 руб.</p>
+                  <a href="#">Селфи-палка «Следуй за мной»</a>
+                  <p class="price">4&nbsp;900&nbsp;руб.</p>
                 </li>
                 <li class="card-hover">
                   <a class="button" href="#">В корзину</a>
