--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <span class="slide-number">01</span>
               <b>Делай селфи,<br> как Бен Стиллер!</b>
               <p>
-                Самая длинная палка для селфи доступна в нашем магазине. <br>
+                Самая длинная палка для селфи доступна в нашем магазине.
                 Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
               </p>
               <a class="button popular-button" href="#">Подробнее</a>
@@ -120,8 +120,8 @@
               <span class="slide-number">02</span>
               <b>Худеем <br> правильно!</b>
               <p>
-                Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
-                не пропускать занятия и соблюдать диету.
+                Мотивирующие фитнес-браслеты помогут найти в себе силы
+                не&nbsp;пропускать занятия и соблюдать диету.
               </p>
               <a class="button popular-button" href="#">Подробнее</a>
               <div class="table-container">
@@ -135,10 +135,10 @@
           <li class="popular-slide" id="slide-3">
             <div class="popular-wrapper slide3">
               <span class="slide-number">03</span>
-              <b>Порхает как бабочка,<br>
+              <b>Порхает как бабочка,
                 жалит как пчела!</b>
                 <p>
-                  Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
+                  Этот обычный, на первый взгляд, квадрокоптер оснащен
                   мощным лазером, замаскированным под стандартную камеру.
                 </p>
                 <a class="button popular-button" href="#">Подробнее</a>
@@ -168,7 +168,7 @@
               <a class="category category-virtual" href=" vr.html">Виртуальная реальность</a>
             </li>
             <li class="categories-item">
-              <a class="category category-monopod" href="catalog.html">Моноподы <br> для селфи</a>
+              <a class="category category-monopod" href="catalog.html">Моноподы для&nbsp;селфи</a>
             </li>
             <li class="categories-item">
               <a class="category category-actioncam" href="act-cams.html">Экшн-камеры</a>
@@ -202,8 +202,7 @@
               </li>
               <li class="slide-services credit" id="credit">
                 <h3>Кредит</h3>
-                <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные <br>
-                  условия кредита. Выгодные для нашего банка, разумеется.</p>
+                <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные&nbsp;условия кредита. Выгодные для нашего банка, разумеется.</p>
                 </li>
               </ul>
               <div class="slider-switches-services">
@@ -249,8 +248,8 @@
           <div class="section-wrapper">
             <section class="info">
               <h2 class="header-with-bar">О нас</h2>
-              <p>Огромный выбор гаджетов не оставит равнодушным гика,<br> который есть в каждом из нас.</p>
-              <p>Мы можем доставить ваш товар в самые отдаленные точки <br> России! DEVICE работает со многими транспортными компаниями:</p>
+              <p>Огромный выбор гаджетов не оставит равнодушным гика, который&nbsp;есть в каждом из нас.</p>
+              <p>Мы можем доставить ваш товар в самые отдаленные точки России!&nbsp;DEVICE работает со многими транспортными компаниями:</p>
               <ul class="partners">
                 <li class="partners-item">Деловые Линии</li>
                 <li class="partners-item">Автотрейдинг</li>
@@ -260,7 +259,7 @@
             </section>
             <section class="contacts">
               <h2 class="header-with-bar">Контакты</h2>
-              <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br> проверить работоспособность покупки. Всякое бывает.</p>
+              <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить&nbsp;работоспособность покупки. Всякое бывает.</p>
               <a class="index-map" href="#"><img src="img/index-map.jpg" width="560" height="222" alt="Карта"></a>
               <a class="button write-us" href="#">Напишите нам</a>
             </section>
