--- a/catalog.html
+++ b/catalog.html
@@ -189,7 +189,7 @@
                   <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
                 </li>
                 <li class="card-footer">
-                  <a href="#">Профессиональная селфи-палка</a>
+                  <a href="#">Профессиональная селфи&#8209;палка</a>
                   <p class="price">1&nbsp;500&nbsp;руб.</p>
                 </li>
                 <li class="card-hover">
