--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link href="css/normalize.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js"></script>
+  <link rel="stylesheet" href="css/minified-style.css">
   <title>Device</title>
 </head>
 
@@ -345,5 +344,6 @@
             <span class="visually-hidden">Закрыть всплывающее окно</span>
           </button>
         </section>
+        <script src="js/script.js"></script>
       </body>
       </html>
